Changed project syntax to be compatible with Java 8